first working code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,16 +3,20 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.6.0)
+Depends: R (>= 3.6.0),
+    rlist,
+    stringr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 LinkingTo: 
-    BH
+    BH,
+    Rcpp
 Imports: 
     Rcpp
 RoxygenNote: 6.1.1
 Collate: 
+    'RcppExports.R'
     'pkgSetting.R'
     'resourcesManager.R'
     'sharedMemory-class.R'
