--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,5 @@
 export(sharedObject)
 export(sharedObjectById)
 importFrom(Rcpp,sourceCpp)
-importFrom(rlist,list.rbind)
-importFrom(stringr,str_match)
+importFrom(extraDistr,rdunif)
 useDynLib(sharedObject, .registration = TRUE)
