--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 export(copyOnwriteProp)
 export(is.altrep)
 export(peekSharedMemory)
+export(removeAllObject)
+export(removeObject)
 export(serializeSO)
 export(setCopyOnwrite)
-export(sharedAtomic)
-export(sharedDataFrame)
 export(sharedObject)
 export(sharedParms.copyOnWrite)
 export(sharedVector)
