--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sharedObject
 Title: Sharing R objects across multiple R processes
-Version: 0.0.99
+Version: 0.99.0
 Authors@R: c(
   person("Jiefei", "Wang", email = "jwang96@buffalo.edu", role = c("aut", "cre")),
   person("Martin", "Morgan", email = "martin.morgan@roswellpark.org", role = "aut")
@@ -9,7 +9,7 @@ Description: This package is developed for facilitating parallel computing in R.
   It is capable to create an R object in the shared memory space and share the data across multiple R processes. 
   It avoids the overhead of memory dulplication and data transfer, which make sharing big data object across many clusters possible.
 Depends: R (>= 3.6.0)
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 LinkingTo: 
