--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,31 +3,18 @@
 export(copyOnwriteProp)
 export(createInheritedParms)
 export(getDataInfo)
-export(getVecCopyOnWrite)
-export(getVecDID)
-export(getVecPID)
-export(getVecSharedDuplicate)
-export(getVecSharedSub)
-export(getVecTotalSize)
-export(getVecType)
-export(getVecTypeID)
 export(is.altrep)
 export(is.sharedObject)
 export(is.sharedVector)
 export(peekSharedMemory)
 export(removeAllObject)
 export(removeObject)
-export(serializeSO)
 export(setCopyOnwrite)
-export(setVecCopyOnwrite)
-export(setVecOwnData)
-export(setVecSharedDuplicate)
-export(setVecSharedSub)
+export(share)
 export(sharedObject)
 export(sharedParms.copyOnWrite)
 export(sharedVector)
 export(sharedVectorById)
-export(unserializeSO)
 export(unsetCopyOnwrite)
 importFrom(Rcpp,sourceCpp)
 useDynLib(sharedObject, .registration = TRUE)
