rename package rename API update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(getDataInfo)
 export(getLength)
 export(getOwnData)
 export(getProcessID)
-export(getSharedDuplicate)
+export(getSharedCopy)
+export(getSharedObjectOptions)
 export(getSharedProperty)
 export(getSharedSubset)
 export(getTotalSize)
@@ -18,10 +19,11 @@ export(is.sharedObject)
 export(is.sharedVector)
 export(removeAllObject)
 export(removeObject)
-export(setCopyOnwrite)
+export(setCopyOnWrite)
+export(setSharedCopy)
+export(setSharedObjectOptions)
+export(setSharedSubset)
 export(share)
-export(sharedParms.copyOnWrite)
 export(sharedVectorById)
-export(unsetCopyOnwrite)
 importFrom(Rcpp,sourceCpp)
-useDynLib(sharedObject, .registration = TRUE)
+useDynLib(SharedObject, .registration = TRUE)
