Solve formatting issues add C++11 to makevars add zzz.R file hide internal functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Collate:
     'sharedMemory-methods.R'
     'sharedObject-altrep.R'
     'tools.R'
+    'zzz.R'
 Suggests: 
     testthat,
     parallel,
