--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,29 @@
 Package: SharedObject
+Type: Package
 Title: Sharing R objects across multiple R processes
 Version: 0.99.0
-Authors@R: c(
-  person("Jiefei", "Wang", email = "jwang96@buffalo.edu", role = c("aut", "cre")),
-  person("Martin", "Morgan", email = "martin.morgan@roswellpark.org", role = "aut")
-  )
+Date: 2019-6-10
+Author: Jiefei Wang
+Maintainer: Jiefei Wang <szwjf08@gmail.com>
 Description: This package is developed for facilitating parallel computing in R. 
   It is capable to create an R object in the shared memory space and share the data across multiple R processes. 
   It avoids the overhead of memory dulplication and data transfer, which make sharing big data object across many clusters possible.
-Depends: R (>= 3.6.0)
 License: GPL-3
-Encoding: UTF-8
-LazyData: true
 LinkingTo: 
     BH,
     Rcpp
+Depends: R (>= 3.6.0)
 Imports: 
     Rcpp
+biocViews: Infrastructure
+BugReports: https://github.com/Jiefei-Wang/sharedObject/issues
 RoxygenNote: 6.1.1
+Roxygen: list(markdown = TRUE)
+Suggests: 
+    testthat,
+    parallel,
+    knitr,
+    rmarkdown
 Collate: 
     'RcppExports.R'
     'pkgSetting.R'
@@ -27,9 +33,5 @@ Collate:
     'sharedObject-altrep.R'
     'tools.R'
     'zzz.R'
-Suggests: 
-    testthat,
-    parallel,
-    knitr,
-    rmarkdown
 VignetteBuilder: knitr
+Encoding: UTF-8
