fix package checking issue

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,7 @@ export(setSharedObjectOptions)
 export(setSharedSubset)
 export(share)
 importFrom(Rcpp,sourceCpp)
+importFrom(methods,is)
+importFrom(methods,new)
+importFrom(stats,runif)
 useDynLib(SharedObject, .registration = TRUE)
