--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ LinkingTo:
 Depends: R (>= 3.6.0)
 Imports: 
     Rcpp,
-    BiocGenerics
+    BiocGenerics,
+    methods,
+    stats
 biocViews: Infrastructure
 BugReports: https://github.com/Jiefei-Wang/sharedObject/issues
 RoxygenNote: 6.1.1
