--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,18 +8,22 @@ export(getSharedCopy)
 export(getSharedObjectOptions)
 export(getSharedObjectProperty)
 export(getSharedSubset)
+export(is.altrep)
 export(is.shared)
 export(listSharedObject)
 export(setCopyOnWrite)
 export(setSharedCopy)
 export(setSharedObjectOptions)
+export(setSharedObjectProperty)
 export(setSharedSubset)
 export(share)
+export(tryShare)
+exportMethods(getSharedObjectProperty)
 exportMethods(setSharedObjectProperty)
 import(BiocGenerics)
 importFrom(Rcpp,sourceCpp)
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,runif)
-importFrom(xptr,xptr_tag)
 useDynLib(SharedObject, .registration = TRUE)
