named shared memory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(share)
 export(tryShare)
 exportMethods(getSharedObjectProperty)
 exportMethods(setSharedObjectProperty)
+exportMethods(share)
 import(BiocGenerics)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,as)
