1. support sharing a list 2. fix a memory issue that causes the object cannot be released on Windows 3. update the vignette to reflect the changes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getSharedSubset)
 export(is.altrep)
 export(is.shared)
 export(listSharedObject)
+export(pkgconfig)
 export(setCopyOnWrite)
 export(setSharedCopy)
 export(setSharedObjectOptions)
