--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,10 +30,12 @@ Suggests:
 RoxygenNote: 7.0.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
+SystemRequirements: GNU make
 Encoding: UTF-8
 Collate: 
     'RcppExports.R'
     'pkgSetting.R'
+    'sharedObject-internal.R'
     'sharedObject-constructor.R'
     'utils.R'
     'sharedObject-method.R'
