1.Add more documents 2.Tested on Windows

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,10 +30,11 @@ Suggests:
 RoxygenNote: 7.0.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
-SystemRequirements: GNU make
+SystemRequirements: GNU make, C++11
 Encoding: UTF-8
 Collate: 
     'RcppExports.R'
+    'developer-APIS.R'
     'pkgSetting.R'
     'sharedObject-internal.R'
     'sharedObject-constructor.R'
