--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,21 @@
 S3method(is.shared,data.frame)
 S3method(is.shared,default)
 S3method(is.shared,list)
+export(allocateNamedSharedMemory)
+export(allocateSharedMemory)
+export(freeSharedMemory)
 export(getCopyOnWrite)
+export(getLastIndex)
 export(getSharedCopy)
+export(getSharedMemorySize)
 export(getSharedObjectOptions)
 export(getSharedObjectProperty)
 export(getSharedSubset)
+export(hasSharedMemory)
 export(is.altrep)
 export(is.shared)
 export(listSharedObject)
+export(mapSharedMemory)
 export(pkgconfig)
 export(setCopyOnWrite)
 export(setSharedCopy)
@@ -19,6 +26,7 @@ export(setSharedObjectProperty)
 export(setSharedSubset)
 export(share)
 export(tryShare)
+export(unmapSharedMemory)
 exportMethods(getSharedObjectProperty)
 exportMethods(setSharedObjectProperty)
 exportMethods(share)
