--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Sharing R objects across multiple R processes without memory duplication
 Version: 1.1.1
 Date: 2019-6-10
 Author: Jiefei Wang
-Maintainer: Jiefei Wang <szwjf08@gmail.com>
+Maintainer: Jiefei Wang <jwang96@buffalo.edu>
 Description: This package is developed for facilitating parallel computing in R. 
   It is capable to create an R object in the shared memory space and share the data across multiple R processes. 
   It avoids the overhead of memory dulplication and data transfer, which make sharing big data object across many clusters possible.
