--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,14 @@ export(setSharedSubset)
 export(share)
 export(tryShare)
 export(unmapSharedMemory)
+export(unshare)
 exportMethods(getSharedObjectProperty)
 exportMethods(is.shared)
 exportMethods(setSharedObjectProperty)
 exportMethods(share)
+exportMethods(unshare)
 import(BiocGenerics)
+import(methods)
 importFrom(Rcpp,sourceCpp)
 importFrom(methods,as)
 importFrom(methods,is)
