--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -6,7 +6,7 @@ CXX_STD=CXX11
 
 PKG_CPPFLAGS = -DRCPP_USE_UNWIND_PROTECT
 MKDIR_P = ${MKDIR} -p
-PKG_LIBS = -lrt
+PKG_LIBS = @LIBS@
 
 .PHONY: all copy-files make-static
 
