use lock-free method to synchronize between process

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,12 @@ export(getSharedObjectOptions)
 export(getSharedObjectProperty)
 export(getSharedSubset)
 export(hasSharedMemory)
+export(initialSharedObjectPackageData)
 export(is.altrep)
 export(is.shared)
 export(listSharedObject)
 export(mapSharedMemory)
+export(releaseSharedObjectPackageData)
 export(setCopyOnWrite)
 export(setSharedCopy)
 export(setSharedObjectOptions)
