--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -3,32 +3,23 @@ RM?=rm -f
 CP?=cp
 
 CXX_STD=CXX11
-
-PKG_CPPFLAGS = -DRCPP_USE_UNWIND_PROTECT
+#PKG_CPPFLAGS = -DRCPP_USE_UNWIND_PROTECT
 MKDIR_P = ${MKDIR} -p
 PKG_LIBS = @LIBS@
 
-.PHONY: all copy-files make-static
+.PHONY: all create-folder make-static-lib copy-files
 
-all: remove-file ${SHLIB} make-static copy-files cleanup
+all: create-folder ${SHLIB} make-static-lib copy-files
 #all: ${SHLIB}
 
-remove-file:
-	 ${RM} "../inst/include/SharedObject/sharedMemory.h" &&\
-	 ${RM} "../inst/usrlib${R_ARCH}/SharedObject.a" &&\
+create-folder:
 	 ${MKDIR_P} ../inst/include&&\
 	 ${MKDIR_P} ../inst/include/SharedObject&&\
 	 ${MKDIR_P} ../inst/usrlib${R_ARCH}
 
+make-static-lib:
+	 ${AR} -crv SharedObject.a *.o
 
 copy-files:
 	 ${CP} "sharedMemory.h" "../inst/include/SharedObject/"&&\
 	 ${CP} "SharedObject.a" "../inst/usrlib${R_ARCH}/"
-
-
-make-static:
-	 ${AR} -crv SharedObject.a *.o
-
-
-cleanup:
-	 ${RM} ../config.*
