--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,13 @@ Type: Package
 Title: Sharing R objects across multiple R processes without memory duplication
 Version: 1.9.0
 Date: 2019-6-10
-Authors@R: person("Jiefei", "Wang", email = "jwang96@buffalo.edu",
-  role = c("aut", "cre"))
+Authors@R: c(
+    person(
+        "Jiefei", "Wang",
+        email = "szwjf08@gmail.com",
+        role = c("aut", "cre")
+    ),
+    person("Martin", "Morgan", role = "aut"))
 Description: This package is developed for facilitating parallel computing in R. 
   It is capable to create an R object in the shared memory space and share the data across multiple R processes. 
   It avoids the overhead of memory dulplication and data transfer, which make sharing big data object across many clusters possible.
